// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resolveObjectValuesToArray can resolve imported objects passed to Object.values 1`] = `
Array [
  "\\"bar\\"",
  "\\"foo\\"",
  "0",
  "5",
  "null",
  "null",
  "7",
  "\\"foo\\"",
]
`;

exports[`resolveObjectValuesToArray can resolve spreads from imported objects 1`] = `
Array [
  "\\"bar\\"",
  "\\"baz\\"",
  "\\"foo\\"",
]
`;

exports[`resolveObjectValuesToArray resolves Object.values but ignores duplicates 1`] = `
Array [
  "1",
  "5",
  "2",
]
`;

exports[`resolveObjectValuesToArray resolves Object.values but ignores duplicates with getter and setter 1`] = `Array []`;

exports[`resolveObjectValuesToArray resolves Object.values when using getters 1`] = `
Array [
  "1",
  "2",
]
`;

exports[`resolveObjectValuesToArray resolves Object.values when using resolvable spread 1`] = `
Array [
  "1",
  "4",
  "2",
]
`;

exports[`resolveObjectValuesToArray resolves Object.values when using setters 1`] = `
Array [
  "1",
  "2",
]
`;

exports[`resolveObjectValuesToArray resolves Object.values with literals as computed key 1`] = `
Array [
  "2",
  "1",
]
`;

exports[`resolveObjectValuesToArray resolves Object.values with numbers 1`] = `
Array [
  "0",
  "5",
]
`;

exports[`resolveObjectValuesToArray resolves Object.values with strings 1`] = `
Array [
  "\\"bar\\"",
  "\\"foo\\"",
]
`;

exports[`resolveObjectValuesToArray resolves Object.values with undefined or null 1`] = `
Array [
  "null",
  "null",
]
`;
